// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RequireNewPassword test render test render correctly 1`] = `
<Component
  data-test="require-new-password-section"
  theme={
    Object {
      "a": Object {},
      "actionRow": Object {},
      "amazonSignInButton": Object {},
      "button": Object {},
      "container": Object {},
      "facebookSignInButton": Object {},
      "formContainer": Object {},
      "formField": Object {},
      "formRow": Object {},
      "formSection": Object {},
      "googleSignInButton": Object {},
      "hint": Object {},
      "input": Object {},
      "inputLabel": Object {},
      "label": Object {},
      "nav": Object {},
      "navBar": Object {},
      "navButton": Object {},
      "navItem": Object {},
      "navRight": Object {},
      "oAuthSignInButton": Object {},
      "photoPickerButton": Object {},
      "photoPlaceholder": Object {},
      "radio": Object {},
      "sectionBody": Object {},
      "sectionFooter": Object {},
      "sectionFooterPrimaryContent": Object {},
      "sectionFooterSecondaryContent": Object {},
      "sectionHeader": Object {},
      "signInButton": Object {},
      "signInButtonContent": Object {},
      "signInButtonIcon": Object {},
      "strike": Object {},
      "strikeContent": Object {},
      "toast": Object {},
    }
  }
>
  <Component
    data-test="require-new-password-header-section"
    theme={
      Object {
        "a": Object {},
        "actionRow": Object {},
        "amazonSignInButton": Object {},
        "button": Object {},
        "container": Object {},
        "facebookSignInButton": Object {},
        "formContainer": Object {},
        "formField": Object {},
        "formRow": Object {},
        "formSection": Object {},
        "googleSignInButton": Object {},
        "hint": Object {},
        "input": Object {},
        "inputLabel": Object {},
        "label": Object {},
        "nav": Object {},
        "navBar": Object {},
        "navButton": Object {},
        "navItem": Object {},
        "navRight": Object {},
        "oAuthSignInButton": Object {},
        "photoPickerButton": Object {},
        "photoPlaceholder": Object {},
        "radio": Object {},
        "sectionBody": Object {},
        "sectionFooter": Object {},
        "sectionFooterPrimaryContent": Object {},
        "sectionFooterSecondaryContent": Object {},
        "sectionHeader": Object {},
        "signInButton": Object {},
        "signInButtonContent": Object {},
        "signInButtonIcon": Object {},
        "strike": Object {},
        "strikeContent": Object {},
        "toast": Object {},
      }
    }
  >
    Change Password
  </Component>
  <Component
    data-test="require-new-password-body-section"
    theme={
      Object {
        "a": Object {},
        "actionRow": Object {},
        "amazonSignInButton": Object {},
        "button": Object {},
        "container": Object {},
        "facebookSignInButton": Object {},
        "formContainer": Object {},
        "formField": Object {},
        "formRow": Object {},
        "formSection": Object {},
        "googleSignInButton": Object {},
        "hint": Object {},
        "input": Object {},
        "inputLabel": Object {},
        "label": Object {},
        "nav": Object {},
        "navBar": Object {},
        "navButton": Object {},
        "navItem": Object {},
        "navRight": Object {},
        "oAuthSignInButton": Object {},
        "photoPickerButton": Object {},
        "photoPlaceholder": Object {},
        "radio": Object {},
        "sectionBody": Object {},
        "sectionFooter": Object {},
        "sectionFooterPrimaryContent": Object {},
        "sectionFooterSecondaryContent": Object {},
        "sectionHeader": Object {},
        "signInButton": Object {},
        "signInButtonContent": Object {},
        "signInButtonIcon": Object {},
        "strike": Object {},
        "strikeContent": Object {},
        "toast": Object {},
      }
    }
  >
    <Component
      autoFocus={true}
      data-test="require-new-password-new-password-input"
      key="password"
      name="password"
      onChange={[Function]}
      placeholder="New Password"
      theme={
        Object {
          "a": Object {},
          "actionRow": Object {},
          "amazonSignInButton": Object {},
          "button": Object {},
          "container": Object {},
          "facebookSignInButton": Object {},
          "formContainer": Object {},
          "formField": Object {},
          "formRow": Object {},
          "formSection": Object {},
          "googleSignInButton": Object {},
          "hint": Object {},
          "input": Object {},
          "inputLabel": Object {},
          "label": Object {},
          "nav": Object {},
          "navBar": Object {},
          "navButton": Object {},
          "navItem": Object {},
          "navRight": Object {},
          "oAuthSignInButton": Object {},
          "photoPickerButton": Object {},
          "photoPlaceholder": Object {},
          "radio": Object {},
          "sectionBody": Object {},
          "sectionFooter": Object {},
          "sectionFooterPrimaryContent": Object {},
          "sectionFooterSecondaryContent": Object {},
          "sectionHeader": Object {},
          "signInButton": Object {},
          "signInButtonContent": Object {},
          "signInButtonIcon": Object {},
          "strike": Object {},
          "strikeContent": Object {},
          "toast": Object {},
        }
      }
      type="password"
    />
  </Component>
  <Component
    theme={
      Object {
        "a": Object {},
        "actionRow": Object {},
        "amazonSignInButton": Object {},
        "button": Object {},
        "container": Object {},
        "facebookSignInButton": Object {},
        "formContainer": Object {},
        "formField": Object {},
        "formRow": Object {},
        "formSection": Object {},
        "googleSignInButton": Object {},
        "hint": Object {},
        "input": Object {},
        "inputLabel": Object {},
        "label": Object {},
        "nav": Object {},
        "navBar": Object {},
        "navButton": Object {},
        "navItem": Object {},
        "navRight": Object {},
        "oAuthSignInButton": Object {},
        "photoPickerButton": Object {},
        "photoPlaceholder": Object {},
        "radio": Object {},
        "sectionBody": Object {},
        "sectionFooter": Object {},
        "sectionFooterPrimaryContent": Object {},
        "sectionFooterSecondaryContent": Object {},
        "sectionHeader": Object {},
        "signInButton": Object {},
        "signInButtonContent": Object {},
        "signInButtonIcon": Object {},
        "strike": Object {},
        "strikeContent": Object {},
        "toast": Object {},
      }
    }
  >
    <Component
      theme={
        Object {
          "a": Object {},
          "actionRow": Object {},
          "amazonSignInButton": Object {},
          "button": Object {},
          "container": Object {},
          "facebookSignInButton": Object {},
          "formContainer": Object {},
          "formField": Object {},
          "formRow": Object {},
          "formSection": Object {},
          "googleSignInButton": Object {},
          "hint": Object {},
          "input": Object {},
          "inputLabel": Object {},
          "label": Object {},
          "nav": Object {},
          "navBar": Object {},
          "navButton": Object {},
          "navItem": Object {},
          "navRight": Object {},
          "oAuthSignInButton": Object {},
          "photoPickerButton": Object {},
          "photoPlaceholder": Object {},
          "radio": Object {},
          "sectionBody": Object {},
          "sectionFooter": Object {},
          "sectionFooterPrimaryContent": Object {},
          "sectionFooterSecondaryContent": Object {},
          "sectionHeader": Object {},
          "signInButton": Object {},
          "signInButtonContent": Object {},
          "signInButtonIcon": Object {},
          "strike": Object {},
          "strikeContent": Object {},
          "toast": Object {},
        }
      }
    >
      <Component
        onClick={[Function]}
        theme={
          Object {
            "a": Object {},
            "actionRow": Object {},
            "amazonSignInButton": Object {},
            "button": Object {},
            "container": Object {},
            "facebookSignInButton": Object {},
            "formContainer": Object {},
            "formField": Object {},
            "formRow": Object {},
            "formSection": Object {},
            "googleSignInButton": Object {},
            "hint": Object {},
            "input": Object {},
            "inputLabel": Object {},
            "label": Object {},
            "nav": Object {},
            "navBar": Object {},
            "navButton": Object {},
            "navItem": Object {},
            "navRight": Object {},
            "oAuthSignInButton": Object {},
            "photoPickerButton": Object {},
            "photoPlaceholder": Object {},
            "radio": Object {},
            "sectionBody": Object {},
            "sectionFooter": Object {},
            "sectionFooterPrimaryContent": Object {},
            "sectionFooterSecondaryContent": Object {},
            "sectionHeader": Object {},
            "signInButton": Object {},
            "signInButtonContent": Object {},
            "signInButtonIcon": Object {},
            "strike": Object {},
            "strikeContent": Object {},
            "toast": Object {},
          }
        }
      >
        Change
      </Component>
    </Component>
    <Component
      theme={
        Object {
          "a": Object {},
          "actionRow": Object {},
          "amazonSignInButton": Object {},
          "button": Object {},
          "container": Object {},
          "facebookSignInButton": Object {},
          "formContainer": Object {},
          "formField": Object {},
          "formRow": Object {},
          "formSection": Object {},
          "googleSignInButton": Object {},
          "hint": Object {},
          "input": Object {},
          "inputLabel": Object {},
          "label": Object {},
          "nav": Object {},
          "navBar": Object {},
          "navButton": Object {},
          "navItem": Object {},
          "navRight": Object {},
          "oAuthSignInButton": Object {},
          "photoPickerButton": Object {},
          "photoPlaceholder": Object {},
          "radio": Object {},
          "sectionBody": Object {},
          "sectionFooter": Object {},
          "sectionFooterPrimaryContent": Object {},
          "sectionFooterSecondaryContent": Object {},
          "sectionHeader": Object {},
          "signInButton": Object {},
          "signInButtonContent": Object {},
          "signInButtonIcon": Object {},
          "strike": Object {},
          "strikeContent": Object {},
          "toast": Object {},
        }
      }
    >
      <Component
        data-test="require-new-password-back-to-sign-in-link"
        onClick={[Function]}
        theme={
          Object {
            "a": Object {},
            "actionRow": Object {},
            "amazonSignInButton": Object {},
            "button": Object {},
            "container": Object {},
            "facebookSignInButton": Object {},
            "formContainer": Object {},
            "formField": Object {},
            "formRow": Object {},
            "formSection": Object {},
            "googleSignInButton": Object {},
            "hint": Object {},
            "input": Object {},
            "inputLabel": Object {},
            "label": Object {},
            "nav": Object {},
            "navBar": Object {},
            "navButton": Object {},
            "navItem": Object {},
            "navRight": Object {},
            "oAuthSignInButton": Object {},
            "photoPickerButton": Object {},
            "photoPlaceholder": Object {},
            "radio": Object {},
            "sectionBody": Object {},
            "sectionFooter": Object {},
            "sectionFooterPrimaryContent": Object {},
            "sectionFooterSecondaryContent": Object {},
            "sectionHeader": Object {},
            "signInButton": Object {},
            "signInButtonContent": Object {},
            "signInButtonIcon": Object {},
            "strike": Object {},
            "strikeContent": Object {},
            "toast": Object {},
          }
        }
      >
        Back to Sign In
      </Component>
    </Component>
  </Component>
</Component>
`;

exports[`RequireNewPassword test render test render correctly with required attributes 1`] = `
<Component
  data-test="require-new-password-section"
  theme={
    Object {
      "a": Object {},
      "actionRow": Object {},
      "amazonSignInButton": Object {},
      "button": Object {},
      "container": Object {},
      "facebookSignInButton": Object {},
      "formContainer": Object {},
      "formField": Object {},
      "formRow": Object {},
      "formSection": Object {},
      "googleSignInButton": Object {},
      "hint": Object {},
      "input": Object {},
      "inputLabel": Object {},
      "label": Object {},
      "nav": Object {},
      "navBar": Object {},
      "navButton": Object {},
      "navItem": Object {},
      "navRight": Object {},
      "oAuthSignInButton": Object {},
      "photoPickerButton": Object {},
      "photoPlaceholder": Object {},
      "radio": Object {},
      "sectionBody": Object {},
      "sectionFooter": Object {},
      "sectionFooterPrimaryContent": Object {},
      "sectionFooterSecondaryContent": Object {},
      "sectionHeader": Object {},
      "signInButton": Object {},
      "signInButtonContent": Object {},
      "signInButtonIcon": Object {},
      "strike": Object {},
      "strikeContent": Object {},
      "toast": Object {},
    }
  }
>
  <Component
    data-test="require-new-password-header-section"
    theme={
      Object {
        "a": Object {},
        "actionRow": Object {},
        "amazonSignInButton": Object {},
        "button": Object {},
        "container": Object {},
        "facebookSignInButton": Object {},
        "formContainer": Object {},
        "formField": Object {},
        "formRow": Object {},
        "formSection": Object {},
        "googleSignInButton": Object {},
        "hint": Object {},
        "input": Object {},
        "inputLabel": Object {},
        "label": Object {},
        "nav": Object {},
        "navBar": Object {},
        "navButton": Object {},
        "navItem": Object {},
        "navRight": Object {},
        "oAuthSignInButton": Object {},
        "photoPickerButton": Object {},
        "photoPlaceholder": Object {},
        "radio": Object {},
        "sectionBody": Object {},
        "sectionFooter": Object {},
        "sectionFooterPrimaryContent": Object {},
        "sectionFooterSecondaryContent": Object {},
        "sectionHeader": Object {},
        "signInButton": Object {},
        "signInButtonContent": Object {},
        "signInButtonIcon": Object {},
        "strike": Object {},
        "strikeContent": Object {},
        "toast": Object {},
      }
    }
  >
    Change Password
  </Component>
  <Component
    data-test="require-new-password-body-section"
    theme={
      Object {
        "a": Object {},
        "actionRow": Object {},
        "amazonSignInButton": Object {},
        "button": Object {},
        "container": Object {},
        "facebookSignInButton": Object {},
        "formContainer": Object {},
        "formField": Object {},
        "formRow": Object {},
        "formSection": Object {},
        "googleSignInButton": Object {},
        "hint": Object {},
        "input": Object {},
        "inputLabel": Object {},
        "label": Object {},
        "nav": Object {},
        "navBar": Object {},
        "navButton": Object {},
        "navItem": Object {},
        "navRight": Object {},
        "oAuthSignInButton": Object {},
        "photoPickerButton": Object {},
        "photoPlaceholder": Object {},
        "radio": Object {},
        "sectionBody": Object {},
        "sectionFooter": Object {},
        "sectionFooterPrimaryContent": Object {},
        "sectionFooterSecondaryContent": Object {},
        "sectionHeader": Object {},
        "signInButton": Object {},
        "signInButtonContent": Object {},
        "signInButtonIcon": Object {},
        "strike": Object {},
        "strikeContent": Object {},
        "toast": Object {},
      }
    }
  >
    <Component
      autoFocus={true}
      data-test="require-new-password-new-password-input"
      key="password"
      name="password"
      onChange={[Function]}
      placeholder="New Password"
      theme={
        Object {
          "a": Object {},
          "actionRow": Object {},
          "amazonSignInButton": Object {},
          "button": Object {},
          "container": Object {},
          "facebookSignInButton": Object {},
          "formContainer": Object {},
          "formField": Object {},
          "formRow": Object {},
          "formSection": Object {},
          "googleSignInButton": Object {},
          "hint": Object {},
          "input": Object {},
          "inputLabel": Object {},
          "label": Object {},
          "nav": Object {},
          "navBar": Object {},
          "navButton": Object {},
          "navItem": Object {},
          "navRight": Object {},
          "oAuthSignInButton": Object {},
          "photoPickerButton": Object {},
          "photoPlaceholder": Object {},
          "radio": Object {},
          "sectionBody": Object {},
          "sectionFooter": Object {},
          "sectionFooterPrimaryContent": Object {},
          "sectionFooterSecondaryContent": Object {},
          "sectionHeader": Object {},
          "signInButton": Object {},
          "signInButtonContent": Object {},
          "signInButtonIcon": Object {},
          "strike": Object {},
          "strikeContent": Object {},
          "toast": Object {},
        }
      }
      type="password"
    />
    <Component
      key="given_name"
      name="given_name"
      onChange={[Function]}
      placeholder="Given Name"
      theme={
        Object {
          "a": Object {},
          "actionRow": Object {},
          "amazonSignInButton": Object {},
          "button": Object {},
          "container": Object {},
          "facebookSignInButton": Object {},
          "formContainer": Object {},
          "formField": Object {},
          "formRow": Object {},
          "formSection": Object {},
          "googleSignInButton": Object {},
          "hint": Object {},
          "input": Object {},
          "inputLabel": Object {},
          "label": Object {},
          "nav": Object {},
          "navBar": Object {},
          "navButton": Object {},
          "navItem": Object {},
          "navRight": Object {},
          "oAuthSignInButton": Object {},
          "photoPickerButton": Object {},
          "photoPlaceholder": Object {},
          "radio": Object {},
          "sectionBody": Object {},
          "sectionFooter": Object {},
          "sectionFooterPrimaryContent": Object {},
          "sectionFooterSecondaryContent": Object {},
          "sectionHeader": Object {},
          "signInButton": Object {},
          "signInButtonContent": Object {},
          "signInButtonIcon": Object {},
          "strike": Object {},
          "strikeContent": Object {},
          "toast": Object {},
        }
      }
      type="text"
    />
    <Component
      key="family_name"
      name="family_name"
      onChange={[Function]}
      placeholder="Family Name"
      theme={
        Object {
          "a": Object {},
          "actionRow": Object {},
          "amazonSignInButton": Object {},
          "button": Object {},
          "container": Object {},
          "facebookSignInButton": Object {},
          "formContainer": Object {},
          "formField": Object {},
          "formRow": Object {},
          "formSection": Object {},
          "googleSignInButton": Object {},
          "hint": Object {},
          "input": Object {},
          "inputLabel": Object {},
          "label": Object {},
          "nav": Object {},
          "navBar": Object {},
          "navButton": Object {},
          "navItem": Object {},
          "navRight": Object {},
          "oAuthSignInButton": Object {},
          "photoPickerButton": Object {},
          "photoPlaceholder": Object {},
          "radio": Object {},
          "sectionBody": Object {},
          "sectionFooter": Object {},
          "sectionFooterPrimaryContent": Object {},
          "sectionFooterSecondaryContent": Object {},
          "sectionHeader": Object {},
          "signInButton": Object {},
          "signInButtonContent": Object {},
          "signInButtonIcon": Object {},
          "strike": Object {},
          "strikeContent": Object {},
          "toast": Object {},
        }
      }
      type="text"
    />
  </Component>
  <Component
    theme={
      Object {
        "a": Object {},
        "actionRow": Object {},
        "amazonSignInButton": Object {},
        "button": Object {},
        "container": Object {},
        "facebookSignInButton": Object {},
        "formContainer": Object {},
        "formField": Object {},
        "formRow": Object {},
        "formSection": Object {},
        "googleSignInButton": Object {},
        "hint": Object {},
        "input": Object {},
        "inputLabel": Object {},
        "label": Object {},
        "nav": Object {},
        "navBar": Object {},
        "navButton": Object {},
        "navItem": Object {},
        "navRight": Object {},
        "oAuthSignInButton": Object {},
        "photoPickerButton": Object {},
        "photoPlaceholder": Object {},
        "radio": Object {},
        "sectionBody": Object {},
        "sectionFooter": Object {},
        "sectionFooterPrimaryContent": Object {},
        "sectionFooterSecondaryContent": Object {},
        "sectionHeader": Object {},
        "signInButton": Object {},
        "signInButtonContent": Object {},
        "signInButtonIcon": Object {},
        "strike": Object {},
        "strikeContent": Object {},
        "toast": Object {},
      }
    }
  >
    <Component
      theme={
        Object {
          "a": Object {},
          "actionRow": Object {},
          "amazonSignInButton": Object {},
          "button": Object {},
          "container": Object {},
          "facebookSignInButton": Object {},
          "formContainer": Object {},
          "formField": Object {},
          "formRow": Object {},
          "formSection": Object {},
          "googleSignInButton": Object {},
          "hint": Object {},
          "input": Object {},
          "inputLabel": Object {},
          "label": Object {},
          "nav": Object {},
          "navBar": Object {},
          "navButton": Object {},
          "navItem": Object {},
          "navRight": Object {},
          "oAuthSignInButton": Object {},
          "photoPickerButton": Object {},
          "photoPlaceholder": Object {},
          "radio": Object {},
          "sectionBody": Object {},
          "sectionFooter": Object {},
          "sectionFooterPrimaryContent": Object {},
          "sectionFooterSecondaryContent": Object {},
          "sectionHeader": Object {},
          "signInButton": Object {},
          "signInButtonContent": Object {},
          "signInButtonIcon": Object {},
          "strike": Object {},
          "strikeContent": Object {},
          "toast": Object {},
        }
      }
    >
      <Component
        onClick={[Function]}
        theme={
          Object {
            "a": Object {},
            "actionRow": Object {},
            "amazonSignInButton": Object {},
            "button": Object {},
            "container": Object {},
            "facebookSignInButton": Object {},
            "formContainer": Object {},
            "formField": Object {},
            "formRow": Object {},
            "formSection": Object {},
            "googleSignInButton": Object {},
            "hint": Object {},
            "input": Object {},
            "inputLabel": Object {},
            "label": Object {},
            "nav": Object {},
            "navBar": Object {},
            "navButton": Object {},
            "navItem": Object {},
            "navRight": Object {},
            "oAuthSignInButton": Object {},
            "photoPickerButton": Object {},
            "photoPlaceholder": Object {},
            "radio": Object {},
            "sectionBody": Object {},
            "sectionFooter": Object {},
            "sectionFooterPrimaryContent": Object {},
            "sectionFooterSecondaryContent": Object {},
            "sectionHeader": Object {},
            "signInButton": Object {},
            "signInButtonContent": Object {},
            "signInButtonIcon": Object {},
            "strike": Object {},
            "strikeContent": Object {},
            "toast": Object {},
          }
        }
      >
        Change
      </Component>
    </Component>
    <Component
      theme={
        Object {
          "a": Object {},
          "actionRow": Object {},
          "amazonSignInButton": Object {},
          "button": Object {},
          "container": Object {},
          "facebookSignInButton": Object {},
          "formContainer": Object {},
          "formField": Object {},
          "formRow": Object {},
          "formSection": Object {},
          "googleSignInButton": Object {},
          "hint": Object {},
          "input": Object {},
          "inputLabel": Object {},
          "label": Object {},
          "nav": Object {},
          "navBar": Object {},
          "navButton": Object {},
          "navItem": Object {},
          "navRight": Object {},
          "oAuthSignInButton": Object {},
          "photoPickerButton": Object {},
          "photoPlaceholder": Object {},
          "radio": Object {},
          "sectionBody": Object {},
          "sectionFooter": Object {},
          "sectionFooterPrimaryContent": Object {},
          "sectionFooterSecondaryContent": Object {},
          "sectionHeader": Object {},
          "signInButton": Object {},
          "signInButtonContent": Object {},
          "signInButtonIcon": Object {},
          "strike": Object {},
          "strikeContent": Object {},
          "toast": Object {},
        }
      }
    >
      <Component
        data-test="require-new-password-back-to-sign-in-link"
        onClick={[Function]}
        theme={
          Object {
            "a": Object {},
            "actionRow": Object {},
            "amazonSignInButton": Object {},
            "button": Object {},
            "container": Object {},
            "facebookSignInButton": Object {},
            "formContainer": Object {},
            "formField": Object {},
            "formRow": Object {},
            "formSection": Object {},
            "googleSignInButton": Object {},
            "hint": Object {},
            "input": Object {},
            "inputLabel": Object {},
            "label": Object {},
            "nav": Object {},
            "navBar": Object {},
            "navButton": Object {},
            "navItem": Object {},
            "navRight": Object {},
            "oAuthSignInButton": Object {},
            "photoPickerButton": Object {},
            "photoPlaceholder": Object {},
            "radio": Object {},
            "sectionBody": Object {},
            "sectionFooter": Object {},
            "sectionFooterPrimaryContent": Object {},
            "sectionFooterSecondaryContent": Object {},
            "sectionHeader": Object {},
            "signInButton": Object {},
            "signInButtonContent": Object {},
            "signInButtonIcon": Object {},
            "strike": Object {},
            "strikeContent": Object {},
            "toast": Object {},
          }
        }
      >
        Back to Sign In
      </Component>
    </Component>
  </Component>
</Component>
`;

exports[`RequireNewPassword test render test render nothing with hide 1`] = `""`;

exports[`RequireNewPassword test render test render nothing with incorrect authState 1`] = `""`;
